<resources>
    <string name="app_name">iot</string>
    <string name="Usuario">Usuario</string>
    <string name="Contrasenia">Contrasenia</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="title_activity_registrar_cuenta">RegistrarCuenta</string>
    <string name="Contracenia2">Reingrese Contrasenia</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="Registrar">Registrar Cuenta</string>
    <string name="Registrar_MascotaP">Registrar Mascota</string>
    <string name="Registrar_MascotaS">Registrar Mascota</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="mascota_image">Imagen de la mascota</string>
    <string name="mensaje_imagen_mascota">mensaje imagen mascota</string>
    <string name="mascota_imagen">mascota imagen</string>
    <string name="imagen_mascota">imagen mascota</string>

</resources>